Safari365 Prod/src/objects/SyncforceServiceLog__c.object
<CustomObject>
    <description>Created by Syncforce tool for logs</description>
    <fields>
        <fullName>NumberOfRecordsProcessed__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>NumberOfRecordsProcessed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfRecordsUnProcessed__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>NumberOfRecordsUnProcessed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>ProcessDate</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedSqlQuery__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>ProcessedSqlQuery</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QueryId__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <externalId>true</externalId>
        <label>QueryId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceObjectName__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>SalesforceObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SqlTableName__c</fullName>
        <description>Created by Syncforce tool for logs</description>
        <label>SqlTableName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SyncforceServiceLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SqlTableName__c</columns>
        <columns>SalesforceObjectName__c</columns>
        <columns>NumberOfRecordsProcessed__c</columns>
        <columns>NumberOfRecordsUnProcessed__c</columns>
        <columns>ProcessedSqlQuery__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>SyncforceServiceLog</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SyncforceServiceLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>